--- a/_posts/2022-01-21-sombras-2.md
+++ b/_posts/2022-01-21-sombras-2.md
@@ -133,18 +133,18 @@ Esa fue la última vez que vi a Elidibus.
 
 Así que…
 
-Ahora toda mi magia está rota.<br/>
-Todo lo que queda es mi mera existencia.<br/>
-Incluso si se desmorona y regresa como arena llevada por el viento.<br/>
-Ya ni siquiera puedo respirar.<br/>
-Tal fue la batalla… así debía ser,<br/>
-ya que era un deseo que quería cumplir apostando todo lo que tenía en ello.<br/>
-Como ya he visto miles de veces, el éter está siendo llamado al Inframundo,<br/>
-y mientras fluye pienso en un largo pasado y un pequeño futuro.<br/>
-El desenlace se alejó de mis manos,<br/>
-pero los actores aún están, de una manera terriblemente extraña sobre el escenario.<br/>
-Si es así, sólo falta un pequeño empujón.<br/>
-No es el momento de bajar el telón.<br/>
-Con una mano que ya no tiene forma, hago chasquear mis dedos…<br/>
+*Ahora toda mi magia está rota.*<br/>
+*Todo lo que queda es mi mera existencia.*<br/>
+*Incluso si se desmorona y regresa como arena llevada por el viento.*<br/>
+*Ya ni siquiera puedo respirar.*<br/>
+*Tal fue la batalla… así debía ser,*<br/>
+*ya que era un deseo que quería cumplir apostando todo lo que tenía en ello.*<br/>
+*Como ya he visto miles de veces, el éter está siendo llamado al Inframundo,*<br/>
+*y mientras fluye pienso en un largo pasado y un pequeño futuro.*<br/>
+*El desenlace se alejó de mis manos,*<br/>
+*pero los actores aún están, de una manera terriblemente extraña sobre el escenario.*<br/>
+*Si es así, sólo falta un pequeño empujón.*<br/>
+*No es el momento de bajar el telón.*<br/>
+*Con una mano que ya no tiene forma, hago chasquear mis dedos…*<br/>
 
-Contempla el epílogo de esta historia.
+*Contempla el epílogo de esta historia.*
