cambio bloque code

--- a/_posts/2022-01-22-guia-ui-03.md
+++ b/_posts/2022-01-22-guia-ui-03.md
@@ -69,7 +69,7 @@ Ahora lo que tenemos que hacer es la macro para esto se muestre solo cuando quer
 Para ellos tenemos que hacer una macro de dos líneas que son las siguientes:
 
 <code>
-    /hotbar copy MIN 10 current 10
+    /hotbar copy MIN 10 current 10<br/>
     /hotbar display 10 [on/off]
 </code>
 
