--- a/_posts/2021-12-18-el-ocular-01.md
+++ b/_posts/2021-12-18-el-ocular-01.md
@@ -12,7 +12,7 @@ hidden: false
 
 El pasado 25 de Noviembre, unos pocos dias antes del acceso anticipado de Endwalker tuvimos la primera entrega del Podcast de  [El Ocular](https://twitter.com/OcularEl){:target="_blank"} con [Choco Feru](https://twitter.com/ChocoFeru){:target="_blank"}, [Noah](https://twitter.com/Habeces4){:target="_blank"}, [Lia Tales](https://twitter.com/LiaTales_ffxiv){:target="_blank"} y la colaboración de [Cecile](https://twitter.com/JuanMedinaCode){:target="_blank"}.
 
-En esta ocasión el Podcast se centró en hacer un repaso a la información de ultima hora antes de Endwalker y de consejos a tener en cuenta en el lanzamiento. Podeis ver el Podcast a completo en el video a continuación.
+En esta ocasión el Podcast se centró en hacer un repaso a la información de ultima hora antes de Endwalker y de consejos a tener en cuenta en el lanzamiento. Podeis ver el Podcast a completo en el vídeo a continuación.
 
 {% include youtube.html id='XEaoDUcQ-iU' %}
 
