--- a/_posts/2022-01-10-el-ocular-02.md
+++ b/_posts/2022-01-10-el-ocular-02.md
@@ -12,7 +12,7 @@ hidden: false
 
 El pasado 8 de Enero tuvimos la segunda entrega del Podcast de [El Ocular](https://twitter.com/OcularEl){:target="_blank"} con [Choco Feru](https://twitter.com/ChocoFeru){:target="_blank"}, [Noah](https://twitter.com/Habeces4){:target="_blank"}, [Lia Tales](https://twitter.com/LiaTales_ffxiv){:target="_blank"} y [Elanor](https://twitter.com/trencapins){:target="_blank"}. En esta ocasión el Podcast se centró en hacer un repaso sobre Endwalker y sobre todo el Lore y posibles teorías.
 
-Podéis ver el Podcast a completo en el video a continuación, no os olvidéis de seguir [el canal](https://www.youtube.com/channel/UC0Ncgc0JH3CtDMraAIrlGkQ){:target="_blank"} y darle like si os ha gustado.
+Podéis ver el Podcast a completo en el vídeo a continuación. No os olvidéis de seguir [el canal](https://www.youtube.com/channel/UC0Ncgc0JH3CtDMraAIrlGkQ){:target="_blank"} y darle like si os ha gustado.
 
 <blockquote>
 <b><i>En este podcast hay múltiples spoilers de la MSQ de Endwalker, por lo cual tener cuidado cuando lo veáis si aún no la habéis completado.</i></b>
