--- a/_posts/2022-01-23-el-ocular-03.md
+++ b/_posts/2022-01-23-el-ocular-03.md
@@ -12,7 +12,7 @@ hidden: false
 
 El pasado 21 de Enero tuvimos la tercera entrega del Podcast de [El Ocular](https://twitter.com/OcularEl){:target="_blank"} con [Choco Feru](https://twitter.com/ChocoFeru){:target="_blank"}, [Noah](https://twitter.com/Habeces4){:target="_blank"}, [Lia Tales](https://twitter.com/LiaTales_ffxiv){:target="_blank"}, [Elanor](https://twitter.com/trencapins){:target="_blank"} y de invitado [Aryn](https://twitter.com/Aryn_XIV){:target="_blank"}. En esta ocasión el Podcast se centró en Teorías Conspiratorias y lo que está por venir en esta expansión.
 
-Podéis ver el Podcast al completo en el video a continuación. No os olvidéis de seguir [el canal](https://www.youtube.com/channel/UC0Ncgc0JH3CtDMraAIrlGkQ){:target="_blank"} y darle like si os ha gustado.
+Podéis ver el Podcast al completo en el vídeo a continuación. No os olvidéis de seguir [el canal](https://www.youtube.com/channel/UC0Ncgc0JH3CtDMraAIrlGkQ){:target="_blank"} y darle like si os ha gustado.
 
 <blockquote>
 <b><i>En este podcast hay múltiples spoilers de la MSQ de Endwalker, por lo cual tener cuidado cuando lo veáis si aún no la habéis completado.</i></b>
