--- a/_posts/2022-02-01-valentione-2022.md
+++ b/_posts/2022-02-01-valentione-2022.md
@@ -25,3 +25,11 @@ Tras **completar las misiones** de evento obtendremos **nuevas recompensas**:
     <br/>
     En este caso tendremos <b>Postmoogle Barding</b>, una armadura para nuestro Chocobo y <b>Valentione Mobile</b> un adorno colgable para <b>housing</b>.
 </p>
+
+**Actualización del 4 de Febrero**
+
+<p align="center">
+    <img src="{{ site.baseurl }}/assets/images/articles/noticias/valentione-2022/prisma_valentone.jpg" alt="recompensas"/>
+    <br/>
+    También tendremos unos <b>nuevos primas</b> que hace <b>medio corazón</b> a la izquierda o derecha por lo cual <b>necesitaremos a otra persona</b> para hacer un <b>corazón completo</b> y poder hacernos una foto <b>como</b> la que veis en <b>la imagen</b>.
+</p>
