arreglo imagen y negrita en glamour 1

--- a/_posts/2022-02-05-glamour-01.md
+++ b/_posts/2022-02-05-glamour-01.md
@@ -4,12 +4,12 @@ title:  "El mundo del Glamour: primeros pasos"
 author: eirene
 categories: [ ]
 tags: guías, glamour]
-image: assets/images/articles/guias/glamour/primerospasos/portada.jpg
+image: assets/images/articles/guias/glamour/primerospasos/portadaprimeros.jpg
 description: "El mundo del Glamour: primeros pasos"
 featured: false
 hidden: true
 ---
-Hola a todos/as, soy Eirene y os traigo una **guía de Glamour completa para principiantes y no tan principiantes**. En esta guía explicaré como usar todo el tema del Glamour y **algún consejo extra que puede ayudarte**. Está hecha en base a mi experiencia personal e iré comentando cosas que he ido viendo a lo largo del tiempo y que son interesantes de saber. Comencé a jugar hace poco más de un año y esto es todo lo que he aprendido de cómo funciona el Glamour hasta ahora. Es la primera vez que hago una guía e intentaré que quede todo explicado de la forma más sencilla posible. ¡Vamos a ello!
+Hola a todos/as, soy Eirene y os traigo una **guía de Glamour completa para principiantes y no tan principiantes**. En esta guía explicaré como usar todo el tema del Glamour y **algún consejo extra que puede ayudarte**. Está hecha en base a mi **experiencia personal** e iré comentando cosas que he ido viendo a lo largo del tiempo y que son interesantes de saber. Comencé a jugar hace poco más de un año y esto es todo lo que he aprendido de cómo funciona el Glamour hasta ahora. Es la primera vez que hago una guía e intentaré que quede todo explicado de la forma más sencilla posible. ¡Vamos a ello!
 
 ### Contenido
 - [Introducción](#introducción)
