actualizacion articulo glamour

--- a/_posts/2022-02-05-glamour-01.md
+++ b/_posts/2022-02-05-glamour-01.md
@@ -1,47 +1,49 @@
 ---
 layout: post
-title:  "El mundo del Glamour: primeros pasos"
+title:  "El Mundo del Glamour: Primeros Pasos"
 author: eirene
 categories: [ ]
-tags: guías, glamour]
+tags: [guías, glamour]
 image: assets/images/articles/guias/glamour/primerospasos/portadaprimeros.jpg
-description: "El mundo del Glamour: primeros pasos"
+description: "El Mundo del Glamour: Primeros Pasos"
 featured: false
 hidden: true
 ---
-Hola a todos/as, soy Eirene y os traigo una **guía de Glamour completa para principiantes y no tan principiantes**. En esta guía explicaré como usar todo el tema del Glamour y **algún consejo extra que puede ayudarte**. Está hecha en base a mi **experiencia personal** e iré comentando cosas que he ido viendo a lo largo del tiempo y que son interesantes de saber. Comencé a jugar hace poco más de un año y esto es todo lo que he aprendido de cómo funciona el Glamour hasta ahora. Es la primera vez que hago una guía e intentaré que quede todo explicado de la forma más sencilla posible. ¡Vamos a ello!
+Hola a todos/as, soy Eirene y os traigo una **guía de *Glamour* completa para principiantes y no tan principiantes**. En esta guía explicaré como usar todo el tema del *Glamour* y **algún consejo extra que puede ayudarte**. Está hecha en base a mi **experiencia personal** e iré comentando cosas que he ido viendo a lo largo del tiempo y que son interesantes de saber. Comencé a jugar hace poco más de un año y esto es todo lo que he aprendido de cómo funciona el *Glamour* hasta ahora. Es la primera vez que hago una guía e intentaré que quede todo explicado de la forma más sencilla posible. ¡Vamos a ello!
 
 ### Contenido
 - [Introducción](#introducción)
-- [Desbloqueando las funciones de glamour](#desbloqueando-las-funciones-de-glamour)
+- [Desbloqueando las funciones de *Glamour*](#desbloqueando-las-funciones-de-glamour)
 - [Accediendo a los armarios](#accediendo-a-los-armarios)
 - [Diferenciando *Armoire* de *Glamour Dresser*](#diferenciando-armoire-de-glamour-dresser)
 - [Guardando objetos en el *Glamour Dresser* y *Armoire*](#guardando-objetos-en-el-glamour-dresser-y-armoire)
 - [Sacando un objeto del *Glamour Dresser* o *Armoire*](#sacando-un-objeto-del-glamour-dresser-o-armoire)
-- [Coloreando piezas, el mundo de los tintes](#a)
-- [Descubriendo los *Glamour Plates*](#a)
-- [Restricciones del equipo](#a)
-- [Aplicando un Glamour fuera de la habitación](#a)
-- [Glamours distintos para jobs que comparten equipo](#a)
-- [Glamoureando equipo “a mano”](#a)
-- [Despedida](#a)
-
+- [Coloreando piezas, el mundo de los tintes](#coloreando-piezas-el-mundo-de-los-tintes)
+- [Descubriendo los *Glamour Plates*](#descubriendo-los-glamour-plates)
+- [Restricciones del equipo](#restricciones-del-equipo)
+- [Aplicando un Glamour fuera de la habitación](#aplicando-un-glamour-fuera-de-la-habitación)
+- [Glamours distintos para jobs que comparten equipo](#glamours-distintos-para-jobs-que-comparten-equipo)
+- [Glamoureando equipo “a mano”](#glamoureando-equipo-a-mano)
+- [Despedida](#despedida)
 
 #### Introducción
 
 Si eres nuevo/a en FFXIV, lo primero de todo **¡bienvenido/a!** Espero que estés disfrutando del juego y sigas haciéndolo.<br/>
-¡Ahora sí, al lío! Habrás descubierto que hay un **sistema llamado Glamour**, gracias al cual puedes tener equipada la mejor pieza para tu clase/job, pero con la apariencia de la que más te guste. Ahora bien, ¿cómo se usa el Glamour? Empecemos por el principio y vayamos paso por paso.
+¡Ahora sí, al lío! Habrás descubierto que hay un **sistema llamado *Glamour***, gracias al cual puedes tener equipada la mejor pieza para tu clase/job, pero con la apariencia de la que más te guste. Ahora bien, ¿cómo se usa el Glamour? Empecemos por el principio y vayamos paso por paso.
 
-#### Desbloqueando las funciones de glamour
+<sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
+
+#### Desbloqueando las funciones de *Glamour*
 
 <blockquote>
-Vamos a hacer un paréntesis para los jugadores nuevos. El Glamour y los tintes se desbloquean en <i>Western Thanalan</i>, en las coordenadas X: 12.5 Y: 14.1, hablando con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/quest/bb7ebd31069/" class="eorzeadb_link" target="_blank">Swyrgeim</a>, que te dará varias misiones azules con un “+”. Dale a este <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/quest/bb7ebd31069/" class="eorzeadb_link" target="_blank">enlace</a> para más información.<br/>
+Vamos a hacer un paréntesis para los jugadores nuevos. El *Glamour* y los tintes se desbloquean en <i>Western Thanalan</i>, en las coordenadas X: 12.5 Y: 14.1, hablando con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/quest/bb7ebd31069/" class="eorzeadb_link" target="_blank">Swyrgeim</a>, que te dará varias misiones azules con un “+”. Dale a este <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/quest/bb7ebd31069/" class="eorzeadb_link" target="_blank">enlace</a> para más información.<br/>
 <br/>
 <i>Si la MSQ (<i>Main Scenario Quest</i>) aún no te ha llevado hasta allí, ten un poco de paciencia y sigue haciéndola hasta que llegues.</i>
 </blockquote>
 
-Además, un poco más a la derecha de este NPC, en las coordenadas X: 12.0 Y: 15.1 tenemos a un NPC llamado *Goberin*, que vende ***Glamour Prism*** (ahora hablaremos de ellos pero **cómprate unos cuantos**) y también unos objetos que hacen que nuestras piezas de equipo se puedan glamourear como transparentes. Yo que tu me compraba una de cada y las metía en el *Glamour Dresser* (ahora llegamos a qué es eso, no te preocupes). Para ello clic en el NPC, le das a “*Purchase Glamouring Items*” y compras uno de cada de los objetos que aparecen en blanco (casco, pechera, guantes, joyas, etc).
+Además, un poco más a la derecha de este NPC, en las coordenadas X: 12.0 Y: 15.1 tenemos a un NPC llamado *Goberin*, que vende ***Glamour Prism*** (ahora hablaremos de ellos pero **cómprate unos cuantos**) y también unos objetos que hacen que nuestras piezas de equipo se puedan glamourear como transparentes. Yo que tú me compraba una de cada y las metía en el *Glamour Dresser* (ahora llegamos a qué es eso, no te preocupes). Para ello clic en el NPC, le das a “*Purchase Glamouring Items*” y compras uno de cada de los objetos que aparecen en blanco (casco, pechera, guantes, joyas, etc).
 
+<sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
 
 #### Accediendo a los armarios
 
@@ -74,15 +76,17 @@ El icono del **medio** es el icono del *Glamour Dresser*.<br/>
 El icono de la **izquierda** es referente a los tintes.<br/>
 Si el icono está de este color **blanco**, significa que ese objeto es apto para esa función. Si alguno de ellos estuviese en **color gris**, significa que esa particularidad no la tiene. 
 
-#### Diferenciando Armoire de Glamour Dresser
+#### Diferenciando *Armoire* de *Glamour Dresser*
 
 Ahora bien, ¿qué diferencia hay entre *Armoire* y *Glamour Dresser*? **El *Armoire* no tiene límite de espacio** de almacenaje pero **sólo** puedes meter **objetos de tienda o de eventos**. Si tienes alguno ni lo dudes, metelo ahí. El ***Glamour Dresser*** tiene **400 huecos totales** (actualmente) de almacenaje, puedes meter todo tipo de piezas de equipo y, si las tiñes antes de meterlas, se guardan teñidas. Ahora llegaremos a esta parte, pero primero hay que hablar de algo importante: los *glamour prism*.<br/>
 Estos **prismas de glamour**, que se obtienen en la *Grand Company*, en vendedores normales o de pvp, se craftean con profesiones de crafteo o se pueden comprar en el *Market Board*, sirven para poder **poner una pieza de equipo dentro del *Glamour Dresser***. ¡Por este motivo necesitarás unos cuantos!
 
+<sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
+
 #### Guardando objetos en el *Glamour Dresser* y *Armoire*
 
 Ahora vamos a hablar de cómo guardar objetos para luego poder glamourear nuestro equipo.<br/>
-Al darle clic al Glamour Dresser veremos lo siguiente:
+Al darle clic al *Glamour Dresser* veremos lo siguiente:
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/glamour/primerospasos/3.jpg" alt="3"/></p>
 
@@ -93,9 +97,13 @@ Para **meter un objeto nuevo en el *Glamour Dresser*** (teniendo **glamour prism
 
 El ***Armoire*** funciona parecido. Haces clic encima, seleccionas “*Store an item*” y se te abre una ventana donde aparecen todos los objetos que pueden ir dentro. Si esa lista está vacía es que ninguno puede ir allí dentro. 
 
-#### Sacando un objeto del Glamour Dresser o Armoire
+<sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
+
+#### Sacando un objeto del *Glamour Dresser* o *Armoire*
 
 En ambos casos, **las piezas se pueden sacar cuando quieras**. En el caso del *Glamour Dresser*, en la ventana de la izquierda de la foto de arriba, le das clic derecho al objeto que quieres sacar de allí y seleccionas “*Restore item*”. Una vez hecho eso, la pieza aparecerá en tu inventario o en tu *Armory Chest*. En el *Armoire*, al darle *click* seleccionas “*Remove an item*”, lo seleccionas y lo restauras. De vez en cuando va bien hacer limpieza del *Glamour Dresser* porque se van acumulando cosas que a lo mejor no estás usando en ese momento. Puedes guardarlas en un *retainer* hasta que las quieras volver a utilizar, por ejemplo.
+
+<sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
 
 #### Coloreando piezas, el mundo de los tintes.
 
@@ -103,6 +111,8 @@ Pasemos a hablar de los tintes. Este es un tema importante.
 
 **En el Armoire no puedes guardar algo teñido, pero en el Glamour dresser, si**. El tema aquí es que hay tintes que son caros y tu, a lo mejor, esa pieza siempre la vas a querer usar de color blanco puro (es algo que me pasó al principio). Por dicho motivo, antes de meter una pieza en el Glamour Dresser o una vez dentro (en la ventana de la izquierda de la foto de arriba), clicas con el botón derecho sobre la pieza y seleccionas “Dye”. Tienes que tener en el inventario el tinte que quieras ponerle, lo seleccionas de la lista de tintes, le das a aceptar y listo, teñido.<br/>
 Si quieres teñir algo del Armoire tienes dos opciones: o lo tiñes desde los Plates (a continuación vemos cómo funcionan los Plates) siempre que lo uses (con un tinte barato) o lo sacas del Armoire, lo tiñes y lo pones en el Glamour Dresser ya teñido. Te ocupará un hueco, sí, pero no tendrás que gastar ese tinte caro cada vez que lo pongas en un Plate.
+
+<sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
 
 #### Descubriendo los *Glamour Plates*
 
@@ -115,7 +125,59 @@ Aquí podemos editar los **15 *Plates***, seleccionando las cosas desde la venta
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/glamour/primerospasos/9.jpg" alt="9"/></p>
 
 La diferencia de teñirla aquí o antes es que **este tinte se aplica solo al plate** y no a la pieza que tienes guardada. Si la guardaste de color blanco, por ejemplo, ese color se guardará, pero en el Plate podrás teñirla de nuevo del color que tu quieras. Si volvieses a seleccionar esa pieza para un Plate, volvería a aparecer blanca. Por eso es **importante teñir las piezas antes**, porque de lo contrario gastarías una cantidad de blanco (por ejemplo) demasiado grande cada vez que quieras hacer un Plate. Si ya la has almacenado de ese color, no tienes que volver a teñirla cada vez. Eso si, hago una matización. **Los *Plates*** que guardes se quedarán guardados hasta que los modifiques, no se borran solos, pero llega un momento que vas cambiando tanto de Glamour que tienes más glamours que Plates y te renta tener ese pantalón (ejemplo) ya teñido de blanco o del color que sea para que, cuando quieras usarlo, no tengas que gastar el tinte. Además, también disponemos de un objeto para quitar el tinte y devolver el color de base del objeto. Se llama *Terebinth* y lo venden los mismos NPC’s de las ciudades que te venden tintes.<br/>
-Una vez tengas listo tu *Glamour Plate*, le das a Save y, si quieres, a Apply. 
+Una vez tengas listo tu *Glamour Plate*, le das a *Save* y, si quieres, a *Apply*. 
 
+<sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
+
+#### Restricciones del equipo
+
+Como sabrás, hay piezas de equipo para todas las clases y otras específicas. No podrás glamourear una pieza de “*Discipline of War*” en un *Summoner*, por ejemplo.<br/>
+Además, **no podrás glamourear una pieza que sea de mayor nivel o item level que la que lleves equipada**. En los casos en los que te mejora el item level, mejor saca esa pieza del *Glamour Dresser*, póntela y luego ya la volverás a meter en el armario correspondiente cuando te equipes algo mejor.<br/>
+Otra pregunta que me surge de esto: ¿puedo meter algo en el *Glamour Dresser*, ponerlo en un Plate y luego sacarlo del *Dresser* y equiparmelo (porque es lo que más me mejora) o guardarlo y que se quede en ese *Plate*? Sí. Puedes. Yo lo he hecho con el equipo actual de la raid.
+
+<sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
+
+#### Aplicando un *Glamour* fuera de la habitación
+
+¿Puedo cambiar el *Glamour* siempre que quiera?<br/>
+El *Glamour* lo puedes cambiar siempre y cuando estés **en una ciudad principal** y zonas de housing. En medio del campo no puedes aplicar un glamour a una clase/job. Vamos a verlo.
+
+Abriendo la ventana de personaje (la *C* por defecto), encima de nuestra arma, tenemos unos iconos. Dependiendo de donde hayas llegado con la MSQ tendrás más o menos (lo hemos visto antes, al principio de esta guía), pero el que nos compete es el del centro “Glamour Plate”, que tiene de icono unas cartitas.
+
+<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/glamour/primerospasos/7.jpg" alt="7"/></p>
+
+<sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
+
+#### Glamours distintos para jobs que comparten equipo
+
+¿Puedo tener dos jobs del mismo nivel y con el mismo equipo, pero con dos glamours distintos?
+
+<blockquote>
+Vamos a hacer un paréntesis antes de hablar de esto. Tenemos un personaje con varios <i>jobs</i> y, para cambiarnos entre ellos, disponemos de una herramienta muy útil. En la ventana de Character (la <i>C</i> por defecto), a partir del nivel 15 de la MSQ, disponemos de los “<i>Gear Set List</i>” (el icono de la derecha de los tres iconos que tenemos encima del arma), desde donde podemos administrar cómodamente los conjuntos de equipo que utilizamos en los diferentes <i>jobs</i>, guardando y actualizando su configuración.
+</blockquote>
+
+Aquí vamos a ir un paso más allá. Vamos a poner un ejemplo. Tengo dos curanderos al mismo nivel y con el mismo equipo puesto, pero quiero que tengan dos glamours distintos. ¿Se puede? La respuesta es sí y ahora vamos a ver como hacerlo.<br/>
+En la última foto, vemos esos tres iconos encima del arma, ¿verdad? El de la derecha es el que nos interesa: “*Gear Set List*”. En esta lista es donde guardamos los sets de cada clase/job y, desde la misma, nos cambiamos de clase/job. Desde esta misma lista se enlazan los Plates para que, por ejemplo, tu ***Astrologian*** y tu ***White Mage* lleven el mismo equipo y tengan aspectos distintos**. A estos dos también podemos añadir Scholar y Sage (comparten equipo), pero es un ejemplo. Vamos a ver como hacerlo.<br/>
+Teniendo esa lista abierta, **click derecho** sobre el Astrologian en nuestro caso y seleccionamos “Link to Glamour Plate”. Seleccionamos el *Plate* que queremos y le damos a “*Link Gear Set*”, botón que encontrarás en la parte inferior de los *Plates*, igual que el *“Apply”*. **Hacemos lo mismo** con el *White Mage* y el resultado será el siguiente:
+
+<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/glamour/primerospasos/5.jpg" alt="5"/></p>
+
+Si a la **derecha** aparecen esas **cartitas** es que ese *job* tiene **enlazado** un *Plate de Glamour*. En mi caso, el *Reaper*, el *Summoner* y el *Dragoon*, no lo tienen, pero los de arriba si. Haciendo el mismo *click* derecho ahora, podremos modificar el *Plate* enlazado o, directamente, quitarlo.
+
+Hacer este enlace nos permite tener varias apariencias en la misma ropa dependiendo del job en el que estemos puestos, pero tiene un inconveniente y es que no funciona muy bien fuera de las ciudades. Podemos hacer algo al respecto para minimizar estos inconvenientes. Siempre se aplicará el último *Glamour* que hayamos utilizado en una zona de descanso como la ciudad o zona de *housing*. Es sencillo. 
+
+<sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
+
+#### Glamoureando equipo “a mano”
+
+Vamos a añadir una última cosa antes de terminar esta guía. Más allá del *Glamour Dresser*, también podemos glamourear algo a mano. Hacemos ***click* derecho sobre la pieza que queremos cambiar de aspecto**, le damos a “*Cast Glamour*” y elegimos la pieza a mano.<br/> Esto puede ser útil, por ejemplo, si tenemos una ***relic*** en un paso concreto que nos gusta (no se puede meter en el *Glamour Dresser*), no queremos terminarla para tener las réplicas (las réplicas se pueden meter en el *Glamour Dresser*) y queremos usar esa apariencia actual. Podemos hacer esto y glamourear a mano, por así decirlo. Debemos conservar el objeto original para glamourearlo de nuevo cuando cambiemos el objeto al cual le hemos aplicado la apariencia y cada vez se gastará un glamour prism. Es un método más costoso en cuanto a prismas, pero es útil para casos como el del ejemplo.
+
+<sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
+
+#### Despedida
+
+Esto es todo para esta guía de iniciación en el glamour. Es un poco complicado y denso, muy denso, ya lo sé. He intentado explicarlo lo mejor posible y espero que lo hayas entendido todo bien. **Te animo** a probarlo e indagar un poco, toqueteando estas cosas y haciéndote a la interfaz, ¡seguro que te sale bien! Si tienes alguna duda, ¡ponlo en comentarios! Espero que hayas disfrutado de la guía y que te haya podido ayudar aunque sea un poquito. ¡Espero que sigas disfrutando de este juego! ¡Nos vemos por Eorzea!
+
+<sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/glamour/primerospasos/despedida.jpg" alt="despedida"/></p>
