ultimos cambios de la guia de glamour 1

--- a/_posts/2022-02-05-glamour-01.md
+++ b/_posts/2022-02-05-glamour-01.md
@@ -29,7 +29,7 @@ Hola a todos/as, soy Eirene y os traigo una **guía de *Glamour* completa para p
 #### Introducción
 
 Si eres nuevo/a en FFXIV, lo primero de todo **¡bienvenido/a!** Espero que estés disfrutando del juego y sigas haciéndolo.<br/>
-¡Ahora sí, al lío! Habrás descubierto que hay un **sistema llamado *Glamour***, gracias al cual puedes tener equipada la mejor pieza para tu clase/job, pero con la apariencia de la que más te guste. Ahora bien, ¿cómo se usa el Glamour? Empecemos por el principio y vayamos paso por paso.
+¡Ahora sí, al lío! Habrás descubierto que hay un **sistema llamado *Glamour***, gracias al cual puedes tener equipada la mejor pieza para tu clase/*job*, pero con la apariencia de la que más te guste. Ahora bien, ¿cómo se usa el *Glamour*? Empecemos por el principio y vayamos paso por paso.
 
 <sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
 
@@ -41,18 +41,18 @@ Vamos a hacer un paréntesis para los jugadores nuevos. El <i>Glamour</i> y los 
 <i>Si la MSQ (<i>Main Scenario Quest</i>) aún no te ha llevado hasta allí, ten un poco de paciencia y sigue haciéndola hasta que llegues.</i>
 </blockquote>
 
-Además, un poco más a la derecha de este NPC, en las coordenadas X: 12.0 Y: 15.1 tenemos a un NPC llamado *Goberin*, que vende ***Glamour Prism*** (ahora hablaremos de ellos pero **cómprate unos cuantos**) y también unos objetos que hacen que nuestras piezas de equipo se puedan ***glamourear* como transparentes**. Yo que tú me compraba uno de cada y los metía en el *Glamour Dresser* (ahora llegamos a qué es eso, no te preocupes). Para ello *Click* en el NPC, le das a “*Purchase Glamouring Items*” y compras uno de cada de los objetos que aparecen en blanco (casco, pechera, guantes, joyas, etc).
+Además, un poco más a la derecha de este *NPC*, en las coordenadas X: 12.0 Y: 15.1 tenemos a un *NPC* llamado *Goberin*, que vende ***Glamour Prism*** (ahora hablaremos de ellos pero **cómprate unos cuantos**) y también unos objetos que hacen que nuestras piezas de equipo se puedan ***glamourear* como transparentes**. Yo que tú me compraba uno de cada y los metía en el *Glamour Dresser* (ahora llegamos a qué es eso, no te preocupes). Para ello *Click* en el *NPC*, le das a “*Purchase Glamouring Items*” y compras uno de cada de los objetos que aparecen en blanco (casco, pechera, guantes, joyas, etc).
 
 <sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
 
 #### Accediendo a los armarios
 
-Una vez hecho y aclarado lo anterior, lo primero de todo para llegar hasta el Glamour, es encontrar el armario: 
+Una vez hecho y aclarado lo anterior, lo primero de todo para llegar hasta el *Glamour*, es encontrar el armario: 
 
-En las ciudades principales encontraremos un NPC bajo cuyo nombre pone **“Innkeep”**. El de la foto más abajo es el de *Gridania*, que lo podremos encontrar en *New Gridania* en las coordenadas X: 8.5 Y: 11.2.<br/>
+En las ciudades principales encontraremos un *NPC* bajo cuyo nombre pone ***“Innkeep”***. El de la foto más abajo es el de *Gridania*, que lo podremos encontrar en *New Gridania* en las coordenadas X: 8.5 Y: 11.2.<br/>
 En *Limsa Lominsa* lo encontraremos en *Upper Decks* en las coordenadas X: 11.5 Y: 11.4.<br/>
 En *Ul’dah* lo encontraremos en *Steps of Nald* en las coordenadas X: 11.7 Y: 9.5.<br/>
-También tenemos un *Glamour Dresser* y Armoire en los Barracones del escuadrón en nuestra *Grand Company*.
+También tenemos un *Glamour Dresser* y *Armoire* en los Barracones del escuadrón en nuestra *Grand Company*.
 
 Al hablar con él, te permite acceder a **una habitación instanciada solo para ti**.
 
@@ -67,7 +67,7 @@ Ejemplo:
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/glamour/primerospasos/8.jpg" alt="8"/></p>
 
-Este objeto es una pechera (Body) de paladín (PLD) de item level 55 que se puede equipar desde nivel 50 (de paso estamos repasando donde se ven esas cosas), pero eso ahora nos da igual.<br/>
+Este objeto es una pechera (*Body*) de paladín (*PLD*) de *item level* 55 que se puede equipar desde nivel 50 (de paso estamos repasando donde se ven esas cosas), pero eso ahora nos da igual.<br/>
 **Mira arriba a la derecha de la foto**. ¿Ves esos tres iconos blanquecinos?<br/>
 El icono de la **derecha** del todo es el icono del *Armoire*.<br/>
 El icono del **medio** es el icono del *Glamour Dresser*.<br/>
@@ -90,10 +90,10 @@ Al darle *Click* al *Glamour Dresser* veremos lo siguiente:
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/glamour/primerospasos/3.jpg" alt="3"/></p>
 
-La ventana de la **izquierda** es nuestro ***Glamour Dresser***. Podemos verlo por apartados (los iconos de arriba), podemos filtrarlo por clase/job (el desplegable donde pone “all”) y podemos ver también los huecos que nos quedan abajo a la derecha de esa ventana (si, voy un poco apurada, tengo que hacer limpieza).<br/>
+La ventana de la **izquierda** es nuestro ***Glamour Dresser***. Podemos verlo por apartados (los iconos de arriba), podemos filtrarlo por clase/*job* (el desplegable donde pone “*all*”) y podemos ver también los huecos que nos quedan abajo a la derecha de esa ventana (si, voy un poco apurada, tengo que hacer limpieza).<br/>
 En la ventana de la **derecha**, tras hacer la selección que se aprecia arriba, podemos ver todos los objetos de mi inventario que pueden ir al *Glamour Dresser* (si antes has comprado los objetos transparentes que te dije y no están en tu inventario, posiblemente los tengas en el *Armory Chest*, miralo con *Control + C*).
 
-Para **meter un objeto nuevo en el *Glamour Dresser*** (teniendo ***Glamour Prisms* en el inventario**), solo hace falta hacerle *Click* al objeto desde la ventana que tenemos en la foto, aceptamos y se añade. La **pieza** tiene que estar **reparada** y puede que el juego te avise de que se va a perder la progresión del objeto. Dale a aceptar y listo. Lo que se resetea es el progreso del uso del objeto para que cree una materia y en equipo bajo no tiene importancia, así que adelante.
+Para **meter un objeto nuevo en el *Glamour Dresser*** (teniendo ***Glamour Prisms* en el inventario**), solo hace falta hacerle *Click* al objeto desde la ventana que tenemos en la foto, aceptamos y se añade. La **pieza** tiene que estar **reparada** y puede que el juego te avise de que se va a perder la progresión del objeto. Dale a aceptar y listo. Lo que se resetea es el progreso del uso del objeto para que cree una *materia* y en equipo bajo no tiene importancia, así que adelante.
 
 El ***Armoire*** funciona parecido. Haces *Click* encima, seleccionas “*Store an item*” y se te abre una ventana donde aparecen todos los objetos que pueden ir dentro. Si esa lista está vacía es que ninguno puede ir allí dentro. 
 
@@ -109,7 +109,7 @@ En ambos casos, **las piezas se pueden sacar cuando quieras**. En el caso del *G
 
 Pasemos a hablar de los tintes. Este es un tema importante.
 
-**En el Armoire no puedes guardar algo teñido, pero en el Glamour dresser, si**. El tema aquí es que hay tintes que son caros y tú, a lo mejor, esa pieza siempre la vas a querer usar de color blanco puro (es algo que me pasó al principio). Por dicho motivo, antes de meter una pieza en el Glamour Dresser o una vez dentro (en la ventana de la izquierda de la foto de arriba), *Click Derecho* sobre la pieza y seleccionas “*Dye*”. Tienes que tener en el inventario el tinte que quieras ponerle, lo seleccionas de la lista de tintes, le das a aceptar y listo, teñido.<br/>
+**En el *Armoire* no puedes guardar algo teñido, pero en el *Glamour Dresser*, si**. El tema aquí es que hay tintes que son caros y tú, a lo mejor, esa pieza siempre la vas a querer usar de color blanco puro (es algo que me pasó al principio). Por dicho motivo, antes de meter una pieza en el *Glamour Dresser* o una vez dentro (en la ventana de la izquierda de la foto de arriba), *Click Derecho* sobre la pieza y seleccionas “*Dye*”. Tienes que tener en el inventario el tinte que quieras ponerle, lo seleccionas de la lista de tintes, le das a aceptar y listo, teñido.<br/>
 Si quieres teñir algo del *Armoire* tienes dos opciones: o lo tiñes desde los *Plates* (a continuación vemos cómo funcionan los *Plates*) siempre que lo uses (con un tinte barato) o lo sacas del *Armoire*, lo tiñes y lo pones en el *Glamour Dresser* ya teñido. Te ocupará un hueco, sí, pero no tendrás que gastar ese tinte caro cada vez que lo pongas en un *Plate*.
 
 <sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
@@ -120,7 +120,7 @@ Ahora si que si, los *Glamour Plates*. Como puedes ver en la foto de arriba, en 
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/glamour/primerospasos/4.jpg" alt="4"/></p>
 
-Aquí podemos editar los **15 *Plates***, seleccionando las cosas desde la ventana de la **derecha** y pudiendo **acceder al *Armoire*** desde esa ventana. Funciona igual, por apartados y con posibilidad de filtrar por clase/job. Vas haciendole *Click* a cada huequito del *Glamour Plate* (izquierda) y vas poniendo la pieza que quieras (derecha). Aquí puedes teñir las piezas que se puedan teñír (*Click Derecho* encima de la pieza en el hueco del *Plate*).
+Aquí podemos editar los **15 *Plates***, seleccionando las cosas desde la ventana de la **derecha** y pudiendo **acceder al *Armoire*** desde esa ventana. Funciona igual, por apartados y con posibilidad de filtrar por clase/*job*. Vas haciendole *Click* a cada huequito del *Glamour Plate* (izquierda) y vas poniendo la pieza que quieras (derecha). Aquí puedes teñir las piezas que se puedan teñír (*Click Derecho* encima de la pieza en el hueco del *Plate*).
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/glamour/primerospasos/9.jpg" alt="9"/></p>
 
@@ -162,9 +162,9 @@ Teniendo esa lista abierta, ***Click Derecho*** sobre el *Astrologian* en nuestr
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/glamour/primerospasos/5.jpg" alt="5"/></p>
 
-Si a la **derecha** aparecen esas **cartitas** es que ese *job* tiene **enlazado** un *Plate de Glamour*. En mi caso, el *Reaper*, el *Summoner* y el *Dragoon*, no lo tienen, pero los de arriba si. Haciendo el mismo *Click* derecho ahora, podremos modificar el *Plate* enlazado o, directamente, quitarlo.
+Si a la **derecha** aparecen esas **cartitas** es que ese *job* tiene **enlazado** un *Plate de Glamour*. En mi caso, el *Reaper*, el *Summoner* y el *Dragoon*, no lo tienen, pero los de arriba si. Haciendo el mismo *Click Derecho* ahora, podremos modificar el *Plate* enlazado o, directamente, quitarlo.
 
-Hacer este enlace nos permite tener varias apariencias en la misma ropa dependiendo del job en el que estemos puestos, pero tiene un inconveniente y es que no funciona muy bien fuera de las ciudades. Podemos hacer algo al respecto para minimizar estos inconvenientes. Siempre se aplicará el último *Glamour* que hayamos utilizado en una zona de descanso como la ciudad o zona de *Housing*. Es sencillo. 
+Hacer este enlace nos permite tener varias apariencias en la misma ropa dependiendo del *job* en el que estemos puestos, pero tiene un inconveniente y es que no funciona muy bien fuera de las ciudades. Podemos hacer algo al respecto para minimizar estos inconvenientes. Siempre se aplicará el último *Glamour* que hayamos utilizado en una zona de descanso como la ciudad o zona de *Housing*. Es sencillo. 
 
 <sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
 
